fixed button alignment

--- a/css/learning.css
+++ b/css/learning.css
@@ -10,7 +10,3 @@
 .center-wrapper {
 	text-align: center;
 }
-#custom-border-radius .ui-btn-icon-notext.ui-corner-all {
-    -webkit-border-radius: .3125em;
-    border-radius: .3125em;
-}
